<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/pure_white"

    android:orientation="vertical" >

    <TextView
        android:id="@+id/header_titel"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/dmusic_download_cancel_dialog_prompt_collection_playlist"
        android:visibility="gone" />

    <EditText
        android:id="@+id/playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:hint="@string/dmusic_playlist_create_edit_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/playlist_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/playlist_description" >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:visibility="gone" >

        <Button
            android:id="@+id/create_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/save_as_playlist" />

        <Button
            android:id="@+id/cancel_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>